# E3SM

cime_config/machines/: config_batch.xml  config_machines.xml
cime_config/machines/cmake_macros/: gnu_mappy.cmake  intel_flight.cmake
components/cmake/: build_model.cmake  common_setup.cmake
components/eam/bld/: configure
components/eam/cime_config/testdefs/testmods_dirs/eam/partmc/urban_plume/: shell_commands
components/eam/src/chemistry/mozart/: chemistry.F90  mo_chemini.F90
components/eam/src/chemistry/partmc_interface/: partmc_mod.F90
components/homme/: CMakeLists.txt
components/homme/src/share/compose/: compose_slmm_siqk.hpp  siqk_intersect.hpp  siqk_quadrature.hpp  siqk_search.hpp
components/homme/src/share/partmcsl/: CMakeLists.txt
